# windowsGpuMonitor

./: CMakeLists.txt  README.md  cpp.hint  descosmos_gpu_monitor.cpp  descosmos_gpu_monitor.h  main.cpp
config/: dltmgr.h  ntifs.h  ntrtl.h  phconfig.h  phnt.h  phnt_ntdef.h  phnt_windows.h  phsup.h  refp.h
src/: gpuMonitor.cpp  gpuMonitor.h
utils/: Handles.cpp  Handles.h  baseup.cpp  baseup.h  common.h  getWindowsVersion.cpp  getWindowsVersion.h
